...
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
    <string name="send">Send</string>
    <string name="error_email_is_not_valid">Error: invalid email</string>
...
    <string name="privacy">Privacy</string>
    <string name="terms">Terms</string>
    <string name="security">Security</string>
    <string name="security_and_privacy">Security and Privacy</string>
    <string name="connect_your_email_account_to_start_sending_encrypted_messages">Connect your email account\n to send encrypted messages</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="loading">loading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_out">Log out</string>
    <string name="all_labels">All labels</string>
    <string name="no_results">No results</string>
    <string name="set_up_flow_crypt">Set up %1$s</string>
    <plurals name="found_backup_of_your_account_key">
        <item quantity="one">We found a backup of your key</item>
        <item quantity="other">We found backups of %1$d keys</item>
...
