...
        android:id="@+id/imageViewActiveUserPhoto"
        android:layout_width="@dimen/user_photo_size"
        android:layout_height="@dimen/user_photo_size"
        android:layout_margin="@dimen/default_margin_content"
        android:contentDescription="@string/user_photo"
        android:src="@mipmap/ic_account_default_photo"
        app:layout_constraintBottom_toTopOf="@+id/layoutUserDetails"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUserDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
                android:ellipsize="middle"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Android Studio" />

            <TextView
                android:id="@+id/textViewActiveUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                tools:text="android.studio@android.com" />
        </LinearLayout>
...
